# vio

./: .gitignore
CPU_version/: README.md
CPU_version/svo/: CMakeLists.txt
CPU_version/svo/include/svo/: imu_integration.h
CPU_version/svo/src/: config.cpp  imu_integration.cpp  pose_optimizer.cpp
CPU_version/svo_msgs/: CMakeLists.txt
CPU_version/vio_svo/: CMakeLists.txt  package.xml
CPU_version/vio_svo/include/vio_svo/: visualizer.h
CPU_version/vio_svo/launch/: Px30.launch
CPU_version/vio_svo/param/: unity.yaml
CPU_version/vio_svo/src/: visualizer.cpp  vo_node.cpp
GPU_version/: README.md
GPU_version/svo/: CMakeLists.txt  package.xml
GPU_version/svo/include/gpu_svo/: cl_class.h  config.h  depth_filter.h  feature.h  frame.h  frame_handler_base.h  frame_handler_mono.h  global.h  homography.h  imu_integration.h  initialization.h  map.h  matcher.h  point.h  sparse_img_align.h  svoVisionFactor.h
GPU_version/svo/include/svo/: cl_class.h  feature_detection.h  frame_handler_mono.h
GPU_version/svo/kernel/: fast-gray.cl
GPU_version/svo/src/: bundle_adjustment.cpp  cl_class.cpp  config.cpp  depth_filter.cpp  feature_alignment.cpp  feature_detection.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  imu_integration.cpp  initialization.cpp  map.cpp  matcher.cpp  point.cpp  pose_optimizer.cpp  reprojector.cpp  robust_cost.cpp  sparse_img_align.cpp
GPU_version/vio/: CMakeLists.txt  Doxyfile  depth_filter_log.txt  frame_handler_log.txt  out.txt  package.xml
GPU_version/vio/gtsam/: imu_integration.cpp  imu_integration.h  svoVisionFactor.h  svoVisionFactorLandMark.h  svoVisionFactorSmall.h
GPU_version/vio/include/gpu_svo/: atan_camera.h  bundle_adjustment.h  cl_class.h  config.h  depth_filter.h  feature_alignment.h  feature_detection.h  for_it.hpp  frame.h  frame_handler_base.h  frame_handler_mono.h  global.h  initialization.h  map.h  matcher.h  nlls_solver.h  params_helper.h  (+8 more)
GPU_version/vio/kernel/: compute-residual.cl
GPU_version/vio/launch/: Px30.launch
GPU_version/vio/param/: camera_pinhole.yaml  px30.yaml  vo_fast.yaml
GPU_version/vio/src/: atan_camera.cpp  bundle_adjustment.cpp  cl_class.cpp  config.cpp  depth_filter.cpp  feature_alignment.cpp  feature_detection.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  global_optimizer.cpp  homography.cpp  initialization.cpp  map.cpp  matcher.cpp  math_utils.cpp  output_helper.cpp  point.cpp  pose_optimizer.cpp  reprojector.cpp  robust_cost.cpp  sparse_img_align.cpp  sparse_img_align_gpu.cpp  vision.cpp  visualizer.cpp  vo_node.cpp
GPU_version/vio/test/: test_pipeline.cpp  test_pose_optimizer.cpp  test_sparse_img_align.cpp  test_utils.h
svo/: CMakeLists.txt
svo/include/svo/: config.h  depth_filter.h  imu_integration.h  svoVisionFactor.h
svo/src/: frame_handler_mono.cpp  imu_integration.cpp
svo_ros/: CMakeLists.txt
svo_ros/include/svo_ros/: visualizer.h
svo_ros/launch/: Px30.launch  test.launch  usb_cam.launch
svo_ros/src/: visualizer.cpp  vo_node.cpp
vio_svo/: CMakeLists.txt  package.xml
vio_svo/launch/: Px30.launch  test.launch  unity.launch
vio_svo/param/: vo_fast.yaml
vio_svo/src/: visualizer.cpp  vo_node.cpp
(+32 files in other folders)
